--- a/src/application/Registro.fxml
+++ b/src/application/Registro.fxml
@@ -2,28 +2,48 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="544.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerRegistro">
-	<children>
-		<Label fx:id="lblResult" alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="382.0" opacity="0.5" prefHeight="21.0" prefWidth="421.0" text="TODOS LOS CAMPOS SON OBLIGATORIOS *" textAlignment="CENTER" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="45.0" />
-      <AnchorPane layoutX="45.0" layoutY="35.0" prefHeight="337.0" prefWidth="455.0" style="-fx-background-color: white;" styleClass="anchorLogin" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="40.0">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerRegistro">
+   <children>
+      <Pane layoutX="169.0" layoutY="52.0" prefHeight="275.0" prefWidth="262.0">
          <children>
-      		<Label layoutX="74.0" layoutY="38.0" text="Usuario:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="38.0" />
-      		<Label layoutX="82.0" layoutY="87.0" text="Constraseña:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="87.0" />
-      		<TextField fx:id="txtUsername" layoutX="172.0" layoutY="30.0" prefHeight="31.0" prefWidth="201.0" AnchorPane.rightAnchor="81.0" AnchorPane.topAnchor="30.0" />
-      		<PasswordField fx:id="txtPassword" layoutX="172.0" layoutY="90.0" prefHeight="31.0" prefWidth="202.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="80.0" />
-      		<Button fx:id="btnRegistrar" layoutX="225.0" layoutY="276.0" mnemonicParsing="false" onAction="#clickRegistrarUsuario" prefHeight="31.0" prefWidth="149.0" styleClass="buttonVerde" stylesheets="@../application/application.css" text="Registrar" textFill="WHITE" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="80.0" />
-            <Button fx:id="btnCancelar" layoutX="80.0" layoutY="276.0" mnemonicParsing="false" onAction="#goLogin" prefHeight="31.0" prefWidth="101.0" styleClass="buttonRojo" stylesheets="@../application/application.css" text="Cancelar" textFill="WHITE" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="80.0" />
-            <TextField fx:id="txtName" layoutX="186.0" layoutY="196.0" prefHeight="31.0" prefWidth="202.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="180.0" />
-            <TextField fx:id="txtSurname" layoutX="191.0" layoutY="233.0" prefHeight="31.0" prefWidth="202.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="230.0" />
-            <PasswordField fx:id="txtConfirmPassword" layoutX="172.0" layoutY="130.0" prefHeight="31.0" prefWidth="202.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="130.0" />
-            <Label layoutX="80.0" layoutY="131.0" text="Confirmar&#10;Constraseña:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="131.0" />
-            <Label layoutX="81.0" layoutY="188.0" text="Nombre:" AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="188.0" />
-            <Label layoutX="75.0" layoutY="237.0" text="Apellidos:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="237.0" />
+            <Label layoutX="70.0" layoutY="26.0" text="Registrarse en Chat" />
+            <Label layoutX="14.0" layoutY="71.0" text="Name" />
+            <Label layoutX="14.0" layoutY="131.0" text="Phone Number" />
+            <Label layoutX="13.0" layoutY="101.0" text="Username" />
+            <Label layoutX="15.0" layoutY="162.0" text="Password" />
+            <Label layoutX="15.0" layoutY="194.0" text="Password" />
+            <TextField fx:id="txtName" layoutX="108.0" layoutY="69.0" styleClass="Textfield" stylesheets="@SecureApp.css">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtUsername" layoutX="109.0" layoutY="99.0" styleClass="Textfield" stylesheets="@SecureApp.css">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtNumber" layoutX="109.0" layoutY="127.0" styleClass="Textfield" stylesheets="@SecureApp.css">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtPassword" layoutX="109.0" layoutY="156.0" styleClass="Textfield" stylesheets="@SecureApp.css">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="txtConfirmPassword" layoutX="110.0" layoutY="188.0" styleClass="Textfield" stylesheets="@SecureApp.css">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btnRegistrar" layoutX="138.0" layoutY="233.0" mnemonicParsing="false" onAction="#clickRegistrarUsuario" text="Unete" />
          </children>
-      </AnchorPane>
-	</children>
-</AnchorPane>
+      </Pane>
+      <Button fx:id="btnCancelar" layoutX="29.0" layoutY="27.0" mnemonicParsing="false" onAction="#goLogin" text="Volver" />
+   </children>
+</Pane>
