--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerLogin">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('file:imagenFondo.jpeg');" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerLogin">
    <children>
-      <Pane layoutX="158.0" layoutY="28.0" prefHeight="333.0" prefWidth="276.0">
+      <Pane layoutX="158.0" layoutY="28.0" prefHeight="333.0" prefWidth="276.0" style="-fx-background-color: white;">
          <children>
             <Label layoutX="12.0" layoutY="141.0" text="Nickname:" />
             <Label layoutX="14.0" layoutY="180.0" text="Password" />
