--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('file:imagenFondo.jpeg');" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerLogin">
+<Pane id="panelLogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@SecureApp.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerLogin">
    <children>
       <Pane layoutX="158.0" layoutY="28.0" prefHeight="333.0" prefWidth="276.0" style="-fx-background-color: white;">
          <children>
-            <Label layoutX="12.0" layoutY="141.0" text="Nickname:" />
+            <Label layoutX="12.0" layoutY="141.0" text="Phone Number:" />
             <Label layoutX="14.0" layoutY="180.0" text="Password" />
             <TextField fx:id="txtNumber" layoutX="114.0" layoutY="135.0" prefHeight="23.0" prefWidth="120.0" style="-fx-focus-traversable: true;" styleClass="Textfield" stylesheets="@SecureApp.css" />
             <TextField fx:id="txtPassword" layoutX="114.0" layoutY="174.0" prefHeight="29.0" prefWidth="120.0" styleClass="Textfield" stylesheets="@SecureApp.css" />
-            <Button fx:id="btnRegistrarUsuario" layoutX="12.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickRegistro" prefHeight="29.0" prefWidth="91.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" text="Registrarse" />
-            <Button fx:id="btnLogin" layoutX="128.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="29.0" prefWidth="91.0" style="-fx-border-color: #000000; -fx-background-color: #ffffff;" text="Login" />
+            <Button fx:id="btnRegistrarUsuario" layoutX="12.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickRegistro" prefHeight="29.0" prefWidth="91.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Registrarse" textAlignment="CENTER" />
+            <Button fx:id="btnLogin" layoutX="128.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="29.0" prefWidth="91.0" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="Login" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
          </children>
       </Pane>
    </children>
