--- a/src/application/Registro.fxml
+++ b/src/application/Registro.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerRegistro">
+<Pane id="panelRegistro" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@SecureApp.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerRegistro">
    <children>
       <Pane layoutX="169.0" layoutY="52.0" prefHeight="275.0" prefWidth="262.0">
          <children>
@@ -41,9 +41,9 @@
                   <Font size="10.0" />
                </font>
             </TextField>
-            <Button fx:id="btnRegistrar" layoutX="138.0" layoutY="233.0" mnemonicParsing="false" onAction="#clickRegistrarUsuario" text="Unete" />
+            <Button fx:id="btnRegistrar" layoutX="138.0" layoutY="233.0" mnemonicParsing="false" onAction="#clickRegistrarUsuario" onKeyPressed="#clickRegistrarUsuario" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="Unete" />
+            <Button fx:id="btnCancelar" layoutX="69.0" layoutY="233.0" mnemonicParsing="false" onAction="#goLogin" onKeyPressed="#goLogin" styleClass="buttonRojo" stylesheets="@SecureApp.css" text="Volver" />
          </children>
       </Pane>
-      <Button fx:id="btnCancelar" layoutX="29.0" layoutY="27.0" mnemonicParsing="false" onAction="#goLogin" text="Volver" />
    </children>
 </Pane>
