--- a/src/application/App.fxml
+++ b/src/application/App.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="720.0" prefWidth="720.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cliente.ControllerVAgenda">
+<BorderPane prefHeight="720.0" prefWidth="720.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerApp">
 	<top>
 		<Pane styleClass="paneUp" stylesheets="@../application/application.css">
 			<children>
-				<Label alignment="CENTER" contentDisplay="CENTER" layoutX="-5.0" prefHeight="70.0" prefWidth="720.0" style="-fx-text-fill: white;" stylesheets="@../application/application.css" text="Agenda de Contactos" textAlignment="CENTER" textFill="WHITE">
+				<Label alignment="CENTER" contentDisplay="CENTER" layoutX="-5.0" prefHeight="70.0" prefWidth="720.0" style="-fx-text-fill: grey;" stylesheets="@../application/application.css" text="Java Chat " textAlignment="CENTER" textFill="WHITE">
 					<font>
 						<Font size="30.0" />
 					</font>
@@ -27,62 +27,52 @@
 					</image>
 				</ImageView>
             <AnchorPane id="subListado" layoutX="198.0" layoutY="55.0" prefHeight="4.0" prefWidth="315.0" stylesheets="@../application/application.css" />
-            <ImageView fitHeight="27.0" fitWidth="27.0" focusTraversable="true" layoutX="679.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../Resources/logout.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnCerrarSesion" layoutX="678.0" layoutY="18.0" mnemonicParsing="false" onAction="#clickCerrarSesion" opacity="0.0" prefHeight="37.0" prefWidth="28.0" />
-            <ImageView fitHeight="41.0" fitWidth="30.0" focusTraversable="true" layoutX="629.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../Resources/perfil.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnPerfil" layoutX="630.0" layoutY="18.0" mnemonicParsing="false" onAction="#clickPerfil" opacity="0.0" prefHeight="37.0" prefWidth="28.0" />
 			</children>
 		</Pane>
 	</top>
 	<center>
 		<AnchorPane prefHeight="720.0" prefWidth="720.0" BorderPane.alignment="CENTER">
 			<children>
-				<TextField fx:id="txtBuscarContacto" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="410.0" promptText="Nombre del contacto" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-				<Button fx:id="btnBuscar" alignment="CENTER" contentDisplay="CENTER" layoutX="439.0" layoutY="12.0" mnemonicParsing="false" onAction="#buscarContacto" prefHeight="31.0" prefWidth="115.0" text="Buscar" textFill="WHITE" AnchorPane.leftAnchor="439.0" AnchorPane.topAnchor="12.0">
+				<TextField fx:id="txtSearchConnection" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="540.0" promptText="connection with user" stylesheets="@SecureApp.css" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+				<Button fx:id="btnSearch" alignment="CENTER" contentDisplay="CENTER" layoutX="582.0" layoutY="12.0" mnemonicParsing="false" onAction="#searchConnection" prefHeight="31.0" prefWidth="124.0" styleClass="buttonAzul" stylesheets="@SecureApp.css" text="Search" textFill="WHITE" AnchorPane.leftAnchor="582.0" AnchorPane.topAnchor="12.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-				<Button fx:id="btnRegistrarContacto" alignment="CENTER" layoutX="580.0" layoutY="64.0" mnemonicParsing="false" onAction="#clickNuevoContacto" prefHeight="40.0" prefWidth="126.0" styleClass="buttonVerde" text="Nuevo contacto" textFill="WHITE" AnchorPane.leftAnchor="580.0" AnchorPane.topAnchor="64.0">
+				<Button fx:id="btnRegisterConnection" alignment="CENTER" layoutX="580.0" layoutY="64.0" mnemonicParsing="false" onAction="#clickNewConnection" prefHeight="40.0" prefWidth="126.0" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="New connection" textFill="WHITE" AnchorPane.leftAnchor="580.0" AnchorPane.topAnchor="64.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-				<TableView fx:id="tableView" layoutX="14.0" layoutY="64.0" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="166.0" AnchorPane.topAnchor="64.0">
+				<TableView fx:id="tableView" layoutX="14.0" layoutY="64.0" stylesheets="@SecureApp.css" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="166.0" AnchorPane.topAnchor="64.0">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy></TableView>
-            <Button fx:id="btnModificarContacto" alignment="CENTER" layoutX="581.0" layoutY="111.0" mnemonicParsing="false" onAction="#clickModificarContacto" prefHeight="40.0" prefWidth="125.0" styleClass="buttonAmarillo" text="Modificar" textFill="WHITE" AnchorPane.leftAnchor="581.0" AnchorPane.topAnchor="128.0">
+            <Button fx:id="btnUpdateConnection" alignment="CENTER" layoutX="581.0" layoutY="111.0" mnemonicParsing="false" onAction="#clickUpdateConnection" prefHeight="40.0" prefWidth="125.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Update" textFill="WHITE" AnchorPane.leftAnchor="581.0" AnchorPane.topAnchor="128.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button fx:id="btnBorrarContacto" alignment="CENTER" layoutX="581.0" layoutY="211.0" mnemonicParsing="false" onAction="#clickBorrarContacto" prefHeight="40.0" prefWidth="125.0" styleClass="buttonRojo" text="Borrar" textFill="WHITE" AnchorPane.leftAnchor="581.0" AnchorPane.topAnchor="192.0">
+            <Button fx:id="btnDeleteConnection" alignment="CENTER" layoutX="581.0" layoutY="211.0" mnemonicParsing="false" onAction="#clickDeleteConnection" prefHeight="40.0" prefWidth="125.0" styleClass="buttonRojo" stylesheets="@SecureApp.css" text="Delete" textFill="WHITE" AnchorPane.leftAnchor="581.0" AnchorPane.topAnchor="192.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button fx:id="btnRefrescar" layoutX="14.0" layoutY="606.0" mnemonicParsing="false" onAction="#refresh" text="Refrescar" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="629.0" AnchorPane.topAnchor="606.0">
+            <Button fx:id="btnRefresh" layoutX="14.0" layoutY="606.0" mnemonicParsing="false" onAction="#refresh" prefHeight="32.0" prefWidth="115.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Refresh" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="591.0" AnchorPane.topAnchor="606.0">
                <font>
                   <Font size="14.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button fx:id="btnBorrarTODOS" alignment="CENTER" layoutX="581.0" layoutY="536.0" mnemonicParsing="false" onAction="#clickBorrarTODOSContactos" prefHeight="53.0" prefWidth="125.0" styleClass="buttonRojo" text="Borrar &#10;Todos los contactos" textFill="WHITE">
+            <Button fx:id="btnDeleteAll" alignment="CENTER" layoutX="581.0" layoutY="536.0" mnemonicParsing="false" onAction="#clickDeleteALLConnections" prefHeight="53.0" prefWidth="125.0" styleClass="buttonRojo" stylesheets="@SecureApp.css" text="Delete all &#10;connections" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Label fx:id="lblUser" alignment="CENTER" contentDisplay="CENTER" layoutX="580.0" layoutY="19.0" prefHeight="35.0" prefWidth="125.0" textAlignment="CENTER">
+            <Label fx:id="lblUser" alignment="CENTER" contentDisplay="CENTER" layoutX="580.0" layoutY="302.0" prefHeight="35.0" prefWidth="125.0" stylesheets="@SecureApp.css" textAlignment="CENTER">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
+            <Button fx:id="btnProfile" layoutX="581.0" layoutY="501.0" mnemonicParsing="false" onAction="#clickProfile" prefHeight="27.0" prefWidth="125.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Profile" />
+            <Button fx:id="btnLogout" layoutX="578.0" layoutY="606.0" mnemonicParsing="false" onAction="#clickLogOut" prefHeight="25.0" prefWidth="128.0" text="LOGOUT" />
 			</children>
 		</AnchorPane>
 	</center>
