--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -13,14 +13,20 @@
          <children>
             <Label layoutX="12.0" layoutY="141.0" text="Phone Number:" />
             <Label layoutX="14.0" layoutY="180.0" text="Password:" />
-            <TextField fx:id="txtNumber" layoutX="114.0" layoutY="135.0" prefHeight="23.0" prefWidth="120.0" style="-fx-focus-traversable: true;" styleClass="Textfield" stylesheets="@SecureApp.css" />
-            <TextField fx:id="txtPassword" layoutX="114.0" layoutY="174.0" prefHeight="29.0" prefWidth="120.0" styleClass="Textfield" stylesheets="@SecureApp.css" />
+            <TextField fx:id="txtNumber" layoutX="114.0" layoutY="135.0" prefHeight="27.0" prefWidth="145.0" style="-fx-focus-traversable: true;" styleClass="Textfield" stylesheets="@SecureApp.css" />
+            <TextField fx:id="txtPassword" layoutX="114.0" layoutY="174.0" prefHeight="29.0" prefWidth="145.0" styleClass="Textfield" stylesheets="@SecureApp.css" />
             <Button fx:id="btnRegistrarUsuario" layoutX="12.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickRegistro" prefHeight="29.0" prefWidth="91.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Sign up" textAlignment="CENTER" />
-            <Button fx:id="btnLogin" layoutX="128.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="29.0" prefWidth="91.0" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="Login" textAlignment="CENTER">
+            <Button fx:id="btnLogin" layoutX="143.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="29.0" prefWidth="91.0" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="Login" textAlignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
             <ImageView id="logo" fitHeight="68.0" fitWidth="91.0" layoutX="93.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="302.0" prefHeight="17.0" prefWidth="276.0" text="Forget your password?  Click here to reset" textFill="#eb0404" />
+            <Button layoutX="26.0" layoutY="298.0" mnemonicParsing="false" onAction="#clickForgetPassword" prefHeight="27.0" prefWidth="228.0" style="-fx-background-color: transparent; -fx-background-radius: 0; -fx-border-color: transparent;">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </Pane>
    </children>
