--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -14,7 +15,6 @@
             <Label layoutX="12.0" layoutY="141.0" text="Phone Number:" />
             <Label layoutX="14.0" layoutY="180.0" text="Password:" />
             <TextField fx:id="txtNumber" layoutX="114.0" layoutY="135.0" prefHeight="27.0" prefWidth="145.0" style="-fx-focus-traversable: true;" styleClass="Textfield" stylesheets="@SecureApp.css" />
-            <TextField fx:id="txtPassword" layoutX="114.0" layoutY="174.0" prefHeight="29.0" prefWidth="145.0" styleClass="Textfield" stylesheets="@SecureApp.css" />
             <Button fx:id="btnRegistrarUsuario" layoutX="12.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickRegistro" prefHeight="29.0" prefWidth="91.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Sign up" textAlignment="CENTER" />
             <Button fx:id="btnLogin" layoutX="143.0" layoutY="240.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="29.0" prefWidth="91.0" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="Login" textAlignment="CENTER">
                <cursor>
@@ -27,6 +27,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <PasswordField fx:id="txtPassword" layoutX="114.0" layoutY="174.0" prefHeight="27.0" prefWidth="145.0" styleClass="Textfield" stylesheets="@SecureApp.css" />
          </children>
       </Pane>
    </children>
