--- a/src/application/App2.fxml
+++ b/src/application/App2.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +18,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="720.0" prefWidth="1020.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerApp">
+<BorderPane prefHeight="720.0" prefWidth="1020.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerApp">
 	<top>
 		<Pane styleClass="paneUp" stylesheets="@../application/SecureApp.css">
 			<children>
@@ -37,10 +43,6 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-				<TableView fx:id="tableView" layoutX="14.0" layoutY="64.0" stylesheets="@SecureApp.css" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="34.0">
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy></TableView>
             <Button fx:id="btnUpdateConnection" alignment="CENTER" layoutX="581.0" layoutY="111.0" mnemonicParsing="false" onAction="#clickUpdateConnection" prefHeight="40.0" prefWidth="125.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Disconnect" textFill="WHITE" AnchorPane.leftAnchor="876.0" AnchorPane.topAnchor="128.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
@@ -50,12 +52,13 @@
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
 				<TextField fx:id="txtSearchConnection" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="540.0" promptText="Que estas pensado..." stylesheets="@SecureApp.css" AnchorPane.leftAnchor="114.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="600.0" />
-            <Button mnemonicParsing="false" text="Enviar" AnchorPane.leftAnchor="730.0" AnchorPane.topAnchor="600.0" />
+            <Button fx:id="send" mnemonicParsing="false" onMouseClicked="#sendClicked" text="Enviar" AnchorPane.leftAnchor="730.0" AnchorPane.topAnchor="600.0" />
             <Label fx:id="lblUser" alignment="CENTER" contentDisplay="CENTER" layoutX="580.0" layoutY="302.0" prefHeight="35.0" prefWidth="125.0" stylesheets="@SecureApp.css" textAlignment="CENTER" AnchorPane.leftAnchor="876.0" AnchorPane.topAnchor="280.0">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
+            <TextArea fx:id="textoFinal" editable="false" layoutX="83.0" layoutY="97.0" prefHeight="447.0" prefWidth="706.0" text="PEPE:HOLA&#10;Jose:adios" />
 			</children>
 		</AnchorPane>
 	</center>
