--- a/src/application/App2.fxml
+++ b/src/application/App2.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -18,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="720.0" prefWidth="1020.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerApp">
+<BorderPane prefHeight="720.0" prefWidth="809.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VControllerApp">
 	<top>
 		<Pane styleClass="paneUp" stylesheets="@../application/SecureApp.css">
 			<children>
@@ -37,28 +31,24 @@
 		</Pane>
 	</top>
 	<center>
-		<AnchorPane prefHeight="720.0" prefWidth="720.0" BorderPane.alignment="CENTER">
+		<AnchorPane prefHeight="648.0" prefWidth="865.0" BorderPane.alignment="CENTER">
 			<children>
-				<Button fx:id="btnRegisterConnection" alignment="CENTER" layoutX="580.0" layoutY="64.0" mnemonicParsing="false" onAction="#clickNewConnection" prefHeight="40.0" prefWidth="126.0" styleClass="buttonVerde" stylesheets="@SecureApp.css" text="Connect" textFill="WHITE" AnchorPane.leftAnchor="876.0" AnchorPane.topAnchor="74.0">
+            <Button fx:id="btnProfile" alignment="CENTER" layoutX="653.0" layoutY="97.0" mnemonicParsing="false" onAction="#clickProfile" prefHeight="40.0" prefWidth="125.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Show password" textFill="WHITE" AnchorPane.leftAnchor="653.0" AnchorPane.topAnchor="97.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button fx:id="btnUpdateConnection" alignment="CENTER" layoutX="581.0" layoutY="111.0" mnemonicParsing="false" onAction="#clickUpdateConnection" prefHeight="40.0" prefWidth="125.0" styleClass="buttonAmarillo" stylesheets="@SecureApp.css" text="Disconnect" textFill="WHITE" AnchorPane.leftAnchor="876.0" AnchorPane.topAnchor="128.0">
+            <Button fx:id="btnLogout" alignment="CENTER" layoutX="653.0" layoutY="152.0" mnemonicParsing="false" onAction="#clickLogOut" prefHeight="40.0" prefWidth="125.0" styleClass="buttonRojo" stylesheets="@SecureApp.css" text="Log-out" textFill="WHITE" AnchorPane.leftAnchor="653.0" AnchorPane.topAnchor="152.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button fx:id="btnDeleteConnection" alignment="CENTER" layoutX="581.0" layoutY="211.0" mnemonicParsing="false" onAction="#clickDeleteConnection" prefHeight="40.0" prefWidth="125.0" styleClass="buttonRojo" stylesheets="@SecureApp.css" text="Log-out" textFill="WHITE" AnchorPane.leftAnchor="876.0" AnchorPane.topAnchor="192.0">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor></Button>
-				<TextField fx:id="txtSearchConnection" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="540.0" promptText="Que estas pensado..." stylesheets="@SecureApp.css" AnchorPane.leftAnchor="114.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="600.0" />
-            <Button fx:id="send" mnemonicParsing="false" onMouseClicked="#sendClicked" text="Enviar" AnchorPane.leftAnchor="730.0" AnchorPane.topAnchor="600.0" />
+				<TextField fx:id="txtMessage" layoutX="84.0" layoutY="575.0" prefHeight="26.0" prefWidth="538.0" promptText="Que estas pensado..." stylesheets="@SecureApp.css" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="379.0" AnchorPane.topAnchor="575.0" />
+            <Button fx:id="send" layoutX="653.0" layoutY="576.0" mnemonicParsing="false" onMouseClicked="#sendClicked" prefHeight="25.0" prefWidth="131.0" styleClass="buttonAzul" stylesheets="@SecureApp.css" text="Enviar" AnchorPane.leftAnchor="653.0" AnchorPane.topAnchor="576.0" />
             <Label fx:id="lblUser" alignment="CENTER" contentDisplay="CENTER" layoutX="580.0" layoutY="302.0" prefHeight="35.0" prefWidth="125.0" stylesheets="@SecureApp.css" textAlignment="CENTER" AnchorPane.leftAnchor="876.0" AnchorPane.topAnchor="280.0">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <TextArea fx:id="textoFinal" editable="false" layoutX="83.0" layoutY="97.0" prefHeight="447.0" prefWidth="706.0" text="PEPE:HOLA&#10;Jose:adios" />
+            <TextArea fx:id="textoFinal" editable="false" layoutX="83.0" layoutY="97.0" prefHeight="447.0" prefWidth="540.0" text="PEPE:HOLA&#10;Jose:adios" />
 			</children>
 		</AnchorPane>
 	</center>
